upload JavaScript Assigment While you wait

--- a/while_you_wait.html
+++ b/while_you_wait.html
@@ -13,13 +13,13 @@
     var daysUntilMyBirthday = 60;
     for(var i = daysUntilMyBirthday; i>=0; i--){
         if(i>30){
-            console.log(i, "days until my birthdaty. Why is time so slow!")
+            console.log(i + " days until my birthdaty. Why is time so slow!")
         }
         else if(i<=30 && i>5){
-            console.log(i, "days until my birthday. I can't wait it's almost here!")
+            console.log(i + " days until my birthday. I can't wait it's almost here!")
         }
         else if(i<=5 && i>0){
-            console.log(i, "DAYS UNTIL MY BIRTHDAY!!! OMG!!!")
+            console.log(i + " DAYS UNTIL MY BIRTHDAY!!! OMG!!!")
         }
         else if(i == 0){
             console.log("ITS MY BIRTHDAY!! LET'S GO PARTY!!!")
